--- a/root/etc/opendkim/opendkim.conf
+++ b/root/etc/opendkim/opendkim.conf
@@ -6,15 +6,14 @@ SyslogSuccess           yes
 
 Canonicalization	relaxed/simple
 
-Domain			domain.tld
-Selector		default
-#KeyFile			/config/dkim/default.private
+#Domain			domain.tld
+#Selector		default
+#KeyFile		/config/dkim/default.private
 
-#Socket                  inet:8891@localhost
-#Socket			local:opendkim.sock
+#Socket			local:/run/opendkim/opendkim.sock
 
 #ReportAddress           postmaster@domain.tld
-SendReports             no
+#SendReports             no
 
 ## Hosts to sign email for - 127.0.0.1 is default
 ## See the OPERATION section of opendkim(8) for more information
@@ -26,4 +25,4 @@ SendReports             no
 #
 # PeerList		X.X.X.X
 
-# PidFile		/var/run/opendkim/opendkim.pid
+# PidFile		/run/opendkim/opendkim.pid
